--- a/ARapp.html
+++ b/ARapp.html
@@ -4,12 +4,8 @@
 </head>
 <body>
   <a-scene embedded arjs>
-    <a-marker preset="hiro">
-      <a-entity 
-      position="0 -3 0"
-      rotation="-60 0 0"
-      text="align: center; width: 10; color: #2AA29F; font: roboto; value: Hello, Tproger">
-      </a-entity>
+    <a-marker preset='hiro'> 
+      <a-sphere position="0 0 0" radius="0.8" color="#2AA29F"></a-sphere>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
