--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <a-scene embedded arjs>
     <a-marker preset='hiro'> 
       <a-entity  
-      rotation="-90 0 0"
-      scale="0.1 0.1 0.1" 
-      gltf-model="https://cdn.aframe.io/test-models/models/glTF-2.0/virtualcity/VC.gltf">
+        rotation="-90 0 0"
+        scale="0.1 0.1 0.1" 
+        gltf-model="./Christmas_tree.gltf">
       </a-entity>
     </a-marker>
     <a-entity camera></a-entity>
