--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <a-marker preset='hiro'> 
       <a-entity  
         rotation="-90 0 0"
-        scale="0.1 0.1 0.1" 
-        gltf-model="./Christmas_tree.gltf">
+        scale="0.1 0.1 0.1"
+        obj-model=”obj: url(CSmodel.obj); 
+        mtl: url(CSmodel.mtl)”>
       </a-entity>
     </a-marker>
     <a-entity camera></a-entity>
