--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <a-scene embedded arjs>
     <a-marker preset='hiro'> 
       <a-entity  
-        obj-model=”obj: url(CSmodel.obj); 
-        mtl: url(CSmodel.mtl)”>
+        obj-model=”obj: CSmodel.obj; 
+        mtl: CSmodel.mtl”>
       </a-entity>
     </a-marker>
     <a-entity camera></a-entity>
