--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <body>
   <a-scene embedded arjs>
     <a-marker preset='hiro'> 
-      <a-entity  
+      <a-entity
+        scale="0.2 0.2 0.2" 
         obj-model="obj: url(./CSmodel.obj); mtl: url(./CSmodel.mtl)">
       </a-entity>
     </a-marker>
