--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <a-marker preset='hiro'>
       <a-entity
         scale="0.2 0.2 0.2" 
-        gltf-model=”./CSmodel.gltf”>
+        gltf-model=”url(./CSmodel.gltf)”>
       <!--<a-entity
         scale="0.2 0.2 0.2" 
         obj-model="obj: url(./CSmodel.obj); mtl: url(./CSmodel.mtl)">-->
