--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 <body>
   <a-scene embedded arjs>
     <a-marker preset='hiro'>
-      <a-entity
-        scale="0.2 0.2 0.2" 
-        gltf-model=”url(./CSmodel.gltf)”>
       <!--<a-entity
         scale="0.2 0.2 0.2" 
-        obj-model="obj: url(./CSmodel.obj); mtl: url(./CSmodel.mtl)">-->
+        gltf-model=”url(./CSmodel.gltf)”>-->
+      <a-entity
+        scale="0.2 0.2 0.2" 
+        obj-model="obj: url(./CTmodel.obj); mtl: url(./CTmodel.mtl)">
       </a-entity>
     </a-marker>
     <a-entity camera></a-entity>
