--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <a-scene embedded arjs>
-    <a-marker preset='hiro'>
+    <a-marker preset='pattern' patternUrl='./ctttu.patt'>
       <!--<a-entity
         scale="0.2 0.2 0.2" 
         gltf-model=”url(./CSmodel.gltf)”>-->
