--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       <a-entity
         scale="0.2 0.2 0.2" 
         obj-model="obj: url(./CTmodel.obj); mtl: url(./CTmodel.mtl)">
-        <a-animation
+        <!--<a-animation
           attribute="rotation"
           easing="linear"
           dur="60000"
           to="0 360 0"
-          repeat="indefinite">
+          repeat="indefinite">-->
         </a-animation>   
       </a-entity>
     </a-marker>
