--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <a-scene embedded arjs>
-    <a-marker preset="pattern" type="pattern" url='./cttu.patt'>
+    <a-marker preset="pattern" type="pattern" url="./cttu.patt">
       <!--<a-entity
         scale="0.2 0.2 0.2" 
         gltf-model=”url(./CSmodel.gltf)”>-->
