--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
           easing="linear"
           dur="60000"
           to="0 360 0"
-          repeat="indefinite">-->
-        </a-animation>   
+          repeat="indefinite">
+        </a-animation>-->
       </a-entity>
     </a-marker>
     <a-entity camera></a-entity>
