--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
 <body>
+  <h1>Hello world!</h1>
   <a-scene embedded arjs>
     <a-marker preset='custom' type='pattern' url='./cttuPattern.patt'>
       <a-entity
