--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </div>
   <a-scene embedded arjs>
     <a-marker preset='custom' type='pattern' url='./cttuPattern.patt'>
-      <a-entity rotation="0 0 0" animation="property: rotation; to: 0 360 0; loop: true; dur: 10000">
+      <a-entity rotation="0 0 0" animation="property: rotation; to: 0 360 0; easing: linear; loop: true; dur: 10000">
         <a-entity
           scale="0.2 0.2 0.2" 
           obj-model="obj: url(./CTmodel.obj); mtl: url(./CTmodel.mtl)">
