--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <a-marker preset='custom' type='pattern' url='./cttuPattern.patt'>
       <a-entity rotation="0 0 0" animation="property: rotation; to: 0 360 0; easing: linear; loop: true; dur: 10000">
         <a-entity scale="0 0 0" animation="property: scale; to: 0.2 0.2 0.2; loop: 1; duration: 3000">
-          <a-entity
-            obj-model="obj: url(./CTmodel.obj); mtl: url(./CTmodel.mtl)">
+          <a-entity obj-model="obj: url(./CTmodel.obj); mtl: url(./CTmodel.mtl)">
           </a-entity>
         </a-entity>
       </a-entity>
