--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <a-scene embedded arjs>
     <a-marker preset='custom' type='pattern' url='./cttuPattern.patt'>
       <a-entity rotation="0 0 0" animation="property: rotation; to: 0 360 0; easing: linear; loop: true; dur: 10000">
-        <a-entity scale="0 0 0" animation="property: scale; to: 0.2 0.2 0.2; loop: true; duration: 3000">
+        <a-entity scale="0 0 0" animation="property: scale; to: 0.2 0.2 0.2; loop: 5; duration: 3000">
           <a-entity obj-model="obj: url(./CTmodel.obj); mtl: url(./CTmodel.mtl)">
           </a-entity>
         </a-entity>
