--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <body>
   <h1>1</h1>
   <a-scene embedded arjs>
+    <a-light type="ambient" color="#FF1493"></a-light>
     <a-marker preset='custom' type='pattern' url='./cttuPattern.patt'>
       <a-entity rotation="0 0 0" animation="property: rotation; to: 0 360 0; easing: linear; loop: true; dur: 10000">
         <a-entity
