--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <a-scene embedded arjs>
     <a-light type="ambient" color="#FF1493"></a-light>
     <a-entity light="type: directional; color: #F5FD72; intensity: 0.6" position="-10 10 10"></a-entity>
+    <a-entity light="type: point; intensity: 0.75; distance: 50; decay: 2" position="1 1 1"></a-entity>
     <a-marker preset='custom' type='pattern' url='./cttuPattern.patt'>
       <a-entity rotation="0 0 0" animation="property: rotation; to: 0 360 0; easing: linear; loop: true; dur: 10000">
         <a-entity
