--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 <body>
   <h1>1</h1>
   <a-scene embedded arjs>
-    <a-light type="ambient" color="#FF1493"></a-light>
-    <a-entity light="type: directional; color: #F5FD72; intensity: 0.6" position="-10 10 10"></a-entity>
-    <a-entity light="type: point; intensity: 0.75; distance: 50; decay: 2" position="1 1 1"></a-entity>
+    <a-entity light="type: directional; color: #ffa6fc; intensity: 0.6" position="-10 10 0"></a-entity>
+    <a-entity light="type: directional; color: #a9d5fc; intensity: 0.6" position="10 10 0"></a-entity>
     <a-marker preset='custom' type='pattern' url='./cttuPattern.patt'>
       <a-entity rotation="0 0 0" animation="property: rotation; to: 0 360 0; easing: linear; loop: true; dur: 10000">
         <a-entity
