--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <h1>1</h1>
   <a-scene embedded arjs>
     <a-entity light="type: ambient; color: #BBB"></a-entity>
-    <a-entity light="type: directional; color: #ffa6fc; intensity: 1" position="-5 5 0"></a-entity>
-    <a-entity light="type: directional; color: #a9d5fc; intensity: 1" position="5 5 0"></a-entity>
+    <a-entity light="type: directional; color: #b700b5; intensity: 1" position="-5 5 0"></a-entity>
+    <a-entity light="type: directional; color: #00b703; intensity: 1" position="5 5 0"></a-entity>
     <a-marker preset='custom' type='pattern' url='./cttuPattern.patt'>
       <a-entity rotation="0 0 0" animation="property: rotation; to: 0 360 0; easing: linear; loop: true; dur: 10000">
         <a-entity
