--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
     <a-entity light="type: directional; color: #b700b5; intensity: 0.6" position="-5 5 0"></a-entity>
     <a-entity light="type: directional; color: #00b703; intensity: 0.6" position="5 5 0"></a-entity>
     <a-marker preset='custom' type='pattern' url='./cttuPattern.patt'>
-      <a-entity rotation="0 0 0" animation="property: rotation; to: 0 360 0; easing: linear; loop: true; dur: 10000">
+      <a-entity rotation="0 0 0" animation="property: rotation; to: 0 360 0; easing: linear; loop: true; dur: 20000">
         <a-entity
           scale="0 0 0" animation="property: scale; to: 0.2 0.2 0.2; loop: 1; duration: 3000"
-          obj-model="obj: #model-obj; mtl: #model-mtl">
+          obj-model="obj: #model-obj; mtl: #model-mtl"
+          sound="src: url(./NYmusic.mp3); autoplay: true; loop: true">
         </a-entity>
       </a-entity>
     </a-marker>
