--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a-entity
           scale="0 0 0" animation="property: scale; to: 0.2 0.2 0.2; loop: 1; duration: 3000"
           obj-model="obj: #model-obj; mtl: #model-mtl"
-          sound="src: url(./NYmusic.mp3); autoplay: false; loop: true">
+          sound="src: url(./NYmusic.mp3); on: click; loop: true">
         </a-entity>
       </a-entity>
     </a-marker>
