--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
 <body>
-  <h1>1</h1>
+  <div style="height: 100px;">
+    Мельников Антон
+  </div>
   <a-scene embedded arjs>
     <a-assets>
       <a-asset-item id="model-obj" src="./CTmodel.obj"></a-asset-item>
