--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
 <body>
-  <div style="height: 100px;">
+  <div style="height: 100px; background-color: #FFF;">
     Мельников Антон
   </div>
   <a-scene embedded arjs>
