--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <body>
   <a-scene embedded arjs>
     <a-assets>
-      <a-asset-item id="circle-obj" src="model/circle.obj"></a-asset-item>
-      <a-asset-item id="circle-mtl" src="model/circle.mtl"></a-asset-item>
-      <a-asset-item id="tree-obj" src="model/tree.obj"></a-asset-item>
-      <a-asset-item id="tree-mtl" src="model/tree.mtl"></a-asset-item>
+      <a-asset-item id="circle-obj" src="./model/circle.obj"></a-asset-item>
+      <a-asset-item id="circle-mtl" src="./model/circle.mtl"></a-asset-item>
+      <a-asset-item id="tree-obj" src="./model/tree.obj"></a-asset-item>
+      <a-asset-item id="tree-mtl" src="./model/tree.mtl"></a-asset-item>
     </a-assets>
     <a-entity light="type: ambient; color: #BBB"></a-entity>
     <a-entity light="type: directional; color: #FFF; intensity: 0.2" position="-0.5 1 1"></a-entity>
