--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <a-entity
           scale="0.2 0.2 0.2"
           obj-model="obj: #strip1-obj; mtl: #strip1-mtl"
-          light="type: point; color: ff000e; intensity: 5">
+          light="type: ambient; color: ff000e">
       </a-entity>
     </a-marker>
     <a-entity camera></a-entity>
