--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </a-entity>
         <a-entity
           scale="0.2 0.2 0.2"
-          obj-model="obj: #strip1-obj; mtl: #strip1-mtl"
-          material="color: #ff000e">
+          material="color: #ff000e"
+          obj-model="obj: #strip1-obj">
       </a-entity>
       </a-entity>
       <a-entity
