--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
       <a-asset-item id="strip1-mtl" src="./models/strip1.mtl"></a-asset-item>
     </a-assets>
     <a-entity light="type: ambient; color: #BBB"></a-entity>
-    <a-entity light="type: ambient; color: #BBB"></a-entity>
-      <a-entity light="type: directional; color: #FFF; intensity: 0.1" position="0 1 1"></a-entity>
-      <a-entity light="type: directional; color: #b700b5; intensity: 0.2" position="-5 5 5"></a-entity>
-      <a-entity light="type: directional; color: #00b703; intensity: 0.2" position="5 5 5"></a-entity>
+    <a-entity light="type: directional; color: #FFF; intensity: 0.2" position="0 1 1"></a-entity>
+    <a-entity light="type: directional; color: #b700b5; intensity: 0.4" position="-5 5 5"></a-entity>
+    <a-entity light="type: directional; color: #00b703; intensity: 0.4" position="5 5 5"></a-entity>
     <a-marker preset='custom' type='pattern' url='./cttuPattern.patt'>
       <a-entity rotation="0 0 0" animation="property: rotation; to: 0 360 0; easing: linear; loop: true; dur: 20000">
         <a-entity
@@ -28,6 +27,7 @@
           scale="0.2 0.2 0.2"
           material="color: #ff000e"
           obj-model="obj: #strip1-obj">
+          <a-animation attribute="material.color" from="blue" to="red" dur="1000" repeat="indefinite"></a-animation>
       </a-entity>
       </a-entity>
       <a-entity
