--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <a-entity
           scale="0.2 0.2 0.2"
           material="color: #ff000e"
-          obj-model="obj: #strip1-obj">
-          <a-animation attribute="material.color" from="blue" to="red" dur="1000" repeat="indefinite"></a-animation>
+          obj-model="obj: #strip1-obj"
+          animation="property: material.color; to: #be05fa; loop: true; dur: 1000">
       </a-entity>
       </a-entity>
       <a-entity
