--- a/index.html
+++ b/index.html
@@ -42,5 +42,8 @@
       </a-entity>
     </a-marker>
     <a-entity camera></a-entity>
+    <a-camera>
+      <a-cursor></a-cursor>
+    </a-camera>
   </a-scene>
 </body>
