--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <a-asset-item id="tree-obj" src="./models/tree.obj"></a-asset-item>
       <a-asset-item id="tree-mtl" src="./models/tree.mtl"></a-asset-item>
       <a-asset-item id="strip1-obj" src="./models/strip1.obj"></a-asset-item>
-      <a-asset-item id="strip2-obj" src="./models/strip2.obj"></a-asset-item>
+      <a-asset-item id="strip2-obj" src="./models/strrip2.obj"></a-asset-item>
     </a-assets>
     <a-entity light="type: ambient; color: #BBB"></a-entity>
     <a-entity light="type: directional; color: #FFF; intensity: 0.2" position="0 1 1"></a-entity>
