--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a-entity
           scale="0 0 0" animation="property: scale; to: 0.2 0.2 0.2; loop: 1; duration: 3000"
           obj-model="obj: #tree-obj; mtl: #tree-mtl"
-          sound="src: url(./NYmusic.mp3); on: click">
+          sound="src: url(./NYmusic.mp3)">
         </a-entity>
         <a-entity
           scale="0.2 0.2 0.2"
@@ -42,8 +42,5 @@
       </a-entity>
     </a-marker>
     <a-entity camera></a-entity>
-    <a-camera>
-      <a-cursor></a-cursor>
-    </a-camera>
   </a-scene>
 </body>
