--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           scale="0.2 0.2 0.2"
           material="color: #f9061e"
           obj-model="obj: #strip1-obj"
-          animation="property: material.color; to: #06f9e1; loop: true; dur: 1000">
+          animation="property: material.color; to: #f9061e #06f9e1 #f9061e; easing: linear; loop: true; dur: 1000">
         </a-entity>
         <a-entity
           scale="0.2 0.2 0.2"
