--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
           scale="0.2 0.2 0.2"
           material="color: #f9061e"
           obj-model="obj: #strip1-obj"
-          animation="property: material.color; to: #f9061e #06f9e1 #f9061e; easing: linear; loop: true; dur: 1000">
+          animation="property: material.color; to: #06f9e1; easing: linear; loop: true; dur: 300; delay: 150">
         </a-entity>
         <a-entity
           scale="0.2 0.2 0.2"
           material="color: #ff0ef0"
           obj-model="obj: #strip2-obj"
-          animation="property: material.color; to: #f3f815; loop: true; dur: 1000">
+          animation="property: material.color; to: #f3f815; loop: true; dur: 300">
         </a-entity>
       </a-entity>
       <a-entity
