--- a/index.html
+++ b/index.html
@@ -27,19 +27,20 @@
           scale="0.2 0.2 0.2"
           material="color: #f9061e"
           obj-model="obj: #strip1-obj"
-          animation="property: material.color; to: #06f9e1; easing: linear; loop: true; dur: 300; delay: 150">
+          animation="property: material.color; to: #06f9e1; easing: linear; loop: true; dur: 600; delay: 300">
         </a-entity>
         <a-entity
           scale="0.2 0.2 0.2"
           material="color: #ff0ef0"
           obj-model="obj: #strip2-obj"
-          animation="property: material.color; to: #f3f815; loop: true; dur: 300">
+          animation="property: material.color; to: #f3f815; loop: true; dur: 600">
         </a-entity>
       </a-entity>
       <a-entity
           scale="0.2 0.2 0.2"
           obj-model="obj: #circle-obj; mtl: #circle-mtl">
       </a-entity>
+      <a-entity text="font: mozillavr; value: Hello World;"></a-entity>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
