--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           scale="0.2 0.2 0.2"
           material="color: #f9061e"
           obj-model="obj: #strip1-obj"
-          animation="property: material.color; to: #06f9e1; easing: linear; loop: true; dur: 600; delay: 300">
+          animation="property: material.color; to: #06f9e1; easing: linear; loop: true; dur: 600">
         </a-entity>
         <a-entity
           scale="0.2 0.2 0.2"
@@ -40,7 +40,7 @@
           scale="0.2 0.2 0.2"
           obj-model="obj: #circle-obj; mtl: #circle-mtl">
       </a-entity>
-      <a-entity text="font: mozillavr; value: Hello World;"></a-entity>
+      <a-text font="mozillavr" color="black" value="Hello World!" scale="1 1 1" position="0 1.5 0" width="4"></a-text>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
