--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           scale="0.2 0.2 0.2"
           obj-model="obj: #circle-obj; mtl: #circle-mtl">
       </a-entity>
-      <a-text font="mozillavr" color="black" value="Hello World!" scale="1 1 1" position="0 1.5 0" width="4"></a-text>
+      <a-text font="mozillavr" color="white" value="Happy New Year" scale="1 1 1" position="-0.4 1.5 0" width="2.5"></a-text>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
