--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
           scale="0.2 0.2 0.2"
           obj-model="obj: #circle-obj; mtl: #circle-mtl">
       </a-entity>
-      <a-text font="mozillavr" color="white" value="Happy New Year" scale="1 1 1" position="-0.4 1.5 0" width="2.5"></a-text>
+      <a-text font="mozillavr" color="white" value="Happy New Year" scale="1 1 1" position="-0.4 1.5 0" width="2.5"
+              animation="property: position; easing: easeInOutQuad; dir: alternate; dur: 1000; to: -0.4 1.6 0; loop: true"></a-text>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
