--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
           scale="0.2 0.2 0.2"
           material="color: #f9061e"
           obj-model="obj: #strip1-obj"
-          animation="property: material.color; to: #06f9e1; easing: linear; loop: true; dur: 600">
+          animation="property: material.color; to: #06f9e1; easing: easeInOutQuad; dir: alternate; loop: true; dur: 600">
         </a-entity>
         <a-entity
           scale="0.2 0.2 0.2"
           material="color: #ff0ef0"
           obj-model="obj: #strip2-obj"
-          animation="property: material.color; to: #f3f815; loop: true; dur: 600">
+          animation="property: material.color; to: #f3f815; easing: easeInOutQuad; dir: alternate; loop: true; dur: 600">
         </a-entity>
       </a-entity>
       <a-entity
