--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
           obj-model="obj: #circle-obj; mtl: #circle-mtl">
       </a-entity>
       <a-entity
-          scale="0.2 0.2 0.2"
+          scale="0.15 0.15 0.15"
+          obj-model="obj: #gifts-obj; mtl: #gifts-mtl">
+      </a-entity>
+      <a-entity
+          rotation="0 180 0"
+          scale="0.15 0.15 0.15"
           obj-model="obj: #gifts-obj; mtl: #gifts-mtl">
       </a-entity>
       <a-text font="mozillavr" color="white" value="Happy New Year" scale="1 1 1" position="-0.4 1.5 0" width="2.5"
