--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
           obj-model="obj: #gifts-obj; mtl: #gifts-mtl">
       </a-entity>
       <a-entity
-          rotation="0 180 0"
+          rotation="0 240 0"
           scale="0.15 0.15 0.15"
           obj-model="obj: #gifts-obj; mtl: #gifts-mtl">
       </a-entity>
-      <a-text font="mozillavr" color="white" value="Happy New Year" scale="1 1 1" position="-0.4 1.5 0" width="2.5"
+      <a-text font="mozillavr" transparent="0.8" color="white" value="Happy New Year" scale="1 1 1" position="-0.4 1.5 0" width="2.5"
               animation="property: position; easing: easeInOutQuad; dir: alternate; dur: 1000; to: -0.4 1.6 0; loop: true"></a-text>
     </a-marker>
     <a-entity camera></a-entity>
