--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a-entity
           scale="0 0 0" animation="property: scale; to: 0.2 0.2 0.2; loop: 1; duration: 3000"
           obj-model="obj: #tree-obj; mtl: #tree-mtl"
-          sound="src: url(./NYmusic.mp3)">
+          sound="src: url(./NYmusic.mp3); loop: true">
         </a-entity>
         <a-entity
           scale="0.2 0.2 0.2"
