--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
       <a-entity rotation="0 0 0" animation="property: rotation; to: 0 360 0; easing: linear; loop: true; dur: 20000">
         <a-entity
           scale="0 0 0" animation="property: scale; to: 0.2 0.2 0.2; loop: 1; duration: 3000"
-          obj-model="obj: #tree-obj; mtl: #tree-mtl"
-          sound="src: url(./NYmusic.mp3); loop: true">
+          obj-model="obj: #tree-obj; mtl: #tree-mtl">
         </a-entity>
         <a-entity
           scale="0.2 0.2 0.2"
