--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a-entity light="type: directional; color: #FFF; intensity: 0.2" position="0 1 1"></a-entity>
     <a-entity light="type: directional; color: #b700b5; intensity: 0.4" position="-5 5 5"></a-entity>
     <a-entity light="type: directional; color: #00b703; intensity: 0.4" position="5 5 5"></a-entity>
-    <a-sound src="url(./NYmusic.mp3)" autoplay="true" position="0 0 0"></a-sound>
+    <a-sound src="url(./NYmusic.mp3)" autoplay="true" position="0 0 0" loop="true"></a-sound>
     <a-marker preset='custom' type='pattern' url='./cttuPattern.patt'>
       <a-entity rotation="0 0 0" animation="property: rotation; to: 0 360 0; easing: linear; loop: true; dur: 20000">
         <a-entity
